created redux actions and reducer for auth, error, and alert

--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,8 @@
     "redux": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^3.1.0",
+    "rsuite": "^5.68.1",
+    "uuid": "^10.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
