--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.2",
+    "@heroicons/react": "^2.1.5",
     "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.7.3",
     "formik": "^2.4.6",
